Fixed overlap issue

--- a/style/sections/_skills.scss
+++ b/style/sections/_skills.scss
@@ -1,7 +1,7 @@
 #skills {
   background-color: $white-color;
   color: $dark-blue-text;
-  margin-top: -15rem;
+  margin-top: 0;
   padding-top: 15rem;
   padding-bottom: 15rem;
   @include respond(tab-land) {
